--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="nav_header_title">Holy Quran</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="menu_home">Home</string>
     <string name="menu_para">Para Index</string>
     <string name="menu_surah">Surah Index</string>
     <string name="menu_search">Search</string>
